# OpenTimelineIO-C-Bindings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: cmake.yml
include/copentime/: errorStatus.h  optionalOpenTime.h  rationalTime.h  timeRange.h  timeTransform.h  util.h
include/copentimelineio/: any.h  anyDictionary.h  anyVector.h  clip.h  composable.h  composableRetainerVector.h  composableVector.h  composition.h  deserialization.h  effect.h  effectRetainerVector.h  effectVector.h  errorStatus.h  externalReference.h  freezeFrame.h  gap.h  generatorReference.h  item.h  linearTimeWarp.h  mapComposableTimeRange.h  marker.h  markerRetainerVector.h  markerVector.h  mediaReference.h  missingReference.h  optionalPairRationalTime.h  retainerPairComposable.h  safely_typed_any.h  serializableCollection.h  serializableObject.h  serializableObjectRetainerVector.h  serializableObjectVector.h  serializableObjectWithMetadata.h  serialization.h  stack.h  stackAlgorithm.h  timeEffect.h  timeline.h  track.h  trackAlgorithm.h  (+5 more)
include/otiostr/: otiostr.h
src/: CMakeLists.txt
src/c-opentimelineio/opentime-bindings/include/copentime/: errorStatus.h
src/c-opentimelineio/opentime-bindings/src/: timeRange.cpp
src/c-opentimelineio/opentimelineio-bindings/include/copentimelineio/: anyDictionary.h  anyVector.h  clip.h  composable.h  composableVector.h  composition.h  effect.h  effectRetainerVector.h  effectVector.h  errorStatus.h  externalReference.h  freezeFrame.h  gap.h  generatorReference.h  item.h  linearTimeWarp.h  marker.h  mediaReference.h  missingReference.h  safely_typed_any.h  serializableCollection.h  serializableObject.h  serializableObjectVector.h  serializableObjectWithMetadata.h  stack.h  timeEffect.h  timeline.h  track.h  trackVector.h  transition.h  typeRegistry.h  unknownSchema.h
src/c-opentimelineio/opentimelineio-bindings/src/: anyDictionary.cpp  clip.cpp  composable.cpp  composableRetainerVector.cpp  composableVector.cpp  composition.cpp  deserialization.cpp  effect.cpp  effectVector.cpp  externalReference.cpp  freezeFrame.cpp  gap.cpp  generatorReference.cpp  item.cpp  linearTimeWarp.cpp  marker.cpp  mediaReference.cpp  missingReference.cpp  safely_typed_any.cpp  serializableCollection.cpp  serializableObject.cpp  serializableObjectRetainerVector.cpp  serializableObjectVector.cpp  serializableObjectWithMetadata.cpp  stack.cpp  timeEffect.cpp  timeline.cpp  track.cpp  transition.cpp  typeRegistry.cpp  unknownSchema.cpp
src/copentime/: CMakeLists.txt  errorStatus.cpp  optionalOpenTime.cpp  rationalTime.cpp  timeRange.cpp  timeTransform.cpp  util.cpp
src/copentimelineio/: CMakeLists.txt  any.cpp  anyDictionary.cpp  anyVector.cpp  clip.cpp  composable.cpp  composableRetainerVector.cpp  composableVector.cpp  composition.cpp  deserialization.cpp  effect.cpp  effectRetainerVector.cpp  effectVector.cpp  errorStatus.cpp  externalReference.cpp  freezeFrame.cpp  gap.cpp  generatorReference.cpp  item.cpp  linearTimeWarp.cpp  mapComposableTimeRange.cpp  marker.cpp  markerRetainerVector.cpp  markerVector.cpp  mediaReference.cpp  missingReference.cpp  optionalPairRationalTime.cpp  retainerPairComposable.cpp  safely_typed_any.cpp  serializableCollection.cpp  serializableObject.cpp  serializableObjectRetainerVector.cpp  serializableObjectVector.cpp  serializableObjectWithMetadata.cpp  serialization.cpp  stack.cpp  stackAlgorithm.cpp  timeEffect.cpp  timeline.cpp  track.cpp  (+5 more)
tests/: CMakeLists.txt  OTIOClipTests.c  OTIOClipTests.cpp  OTIOComposableTests.c  OTIOComposableTests.cpp  OTIOCompositionTests.c  OTIOCompositionTests.cpp  OTIOEffectTests.c  OTIOEffectTests.cpp  OTIOGeneratorReferenceTests.c  OTIOGeneratorReferenceTests.cpp  OTIOItemTests.c  OTIOItemTests.cpp  OTIOMarkerTests.c  OTIOMarkerTests.cpp  OTIOMediaReferenceTests.c  OTIOMediaReferenceTests.cpp  OTIOMultithreadingTests.cpp  OTIOSerializableCollectionTests.c  OTIOSerializableCollectionTests.cpp  OTIOSerializableObjectTests.c  OTIOSerializableObjectTests.cpp  OTIOStackAlgoTests.c  OTIOStackAlgoTests.cpp  OTIOTimelineTests.c  OTIOTrackAlgoTests.c  OTIOTrackAlgoTests.cpp  OTIOTransitionTests.c  OTIOTransitionTests.cpp  OTIOUnknownSchemaTests.c  OTIOUnknownSchemaTests.cpp  epsilon.h  openTimeTests.c  openTimeTests.cpp  util.c  util.h
